# jdocmunch-mcp

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml  todo.md
.github/workflows/: replay.yml  test.yml
benchmarks/replay/: __init__.py  metrics.py  run_replay.py
benchmarks/replay/fixtures/: markdown_realworld.json  notebook_realworld.json  openapi31_realworld.json  openapi_realworld.json  rst_realworld.json  self_v1_11_0.json  swagger20_realworld.json
benchmarks/replay/results/: markdown_realworld-v1.21.0.json  markdown_realworld-v1.22.0.json  markdown_realworld-v1.23.0.json  markdown_realworld-v1.24.0.json  (+257 more)
scripts/: generate_changelog.py
src/jdocmunch_mcp/: __init__.py  server.py
tests/: test_bm25.py  test_check_section_delete_safe.py  test_doc_health_radar.py  test_find_similar_sections.py  test_get_doc_pr_risk_profile.py  test_get_section_blast_radius.py  test_hooks.py  test_hybrid_search.py  test_index_local_sort_by.py  test_index_local_truncation.py  test_openai_compatible_embeddings.py  test_parser.py  test_related_persist_perf.py  test_replay_metrics.py  test_server.py  test_tool_profile.py  test_v1_10_0_bugfixes.py  test_v1_13_0.py  test_v1_14_0.py  test_v1_15_0.py  test_v1_16_0.py  test_v1_17_0.py  test_v1_18_0.py  test_v1_19_0.py  test_v1_21_0.py  test_v1_22_0.py  test_v1_23_0.py  test_v1_24_0.py  test_v1_25_0.py  test_v1_26_0.py  test_v1_27_0.py  test_v1_28_0.py  test_v1_29_0.py  test_v1_30_0.py  test_v1_31_0.py  test_v1_32_0.py  test_v1_33_0.py  test_v1_34_0.py  test_v1_35_0.py  test_v1_36_0.py  (+29 more)
(+95 files in other folders)
