[project]
name = "jdocmunch-mcp"
version = "1.9.0"
description = "Token-efficient MCP server for structured documentation retrieval via section-level indexing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "J. Gravelle", email = "j@gravelle.us" },
]
dependencies = [
    "mcp>=1.10.0,<2.0.0",
    "httpx>=0.27.0",
    "pathspec>=0.12.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jgravelle/jdocmunch-mcp"
Repository = "https://github.com/jgravelle/jdocmunch-mcp"
"Bug Tracker" = "https://github.com/jgravelle/jdocmunch-mcp/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
gemini = ["google-generativeai>=0.8.0"]
openai = ["openai>=1.0.0"]
minimax = ["openai>=1.0.0"]
zhipu = ["openai>=1.0.0"]
semantic = ["google-generativeai>=0.8.0"]

[project.scripts]
jdocmunch-mcp = "jdocmunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jdocmunch_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
